# hafnium-reference

./: BUILD.gn  README.md
aem_v8a_fvp/: BUILD.gn  plat.c
aem_v8a_fvp_vhe/: BUILD.gn
android_aarch64/: BUILD.gn
hikey/: BUILD.gn  fdt.S  fdt.dtb  initrd.S  initrd.img  plat.c
linux_fdt/: BUILD.gn  plat.c
qemu_aarch64/: BUILD.gn  plat.c  plat_entry.S
qemu_aarch64_vhe/: BUILD.gn
rpi/: BUILD.gn  args.gni  mini_uart.c
rpi4/: BUILD.gn
secure_aem_v8a_fvp/: BUILD.gn
secure_aem_v8a_fvp_vhe/: BUILD.gn
secure_tc/: BUILD.gn
secure_tc0/: BUILD.gn
