# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

declare_args() {
  gpio_base_address = 0
  aux_base_address = 0
  core_freq_mhz = 0
  baudrate = 115200  # standard value
}
